Upgrade project to use `Spring Boot 2.7.x`, `Java 21` using openrewrite.