@@ -30,7 +30,7 @@ public class MyAccessDeniedHandler implements AccessDeniedHandler {
                 = SecurityContextHolder.getContext().getAuthentication();
 
         if (auth != null) {
-            logger.info(String.format("User '%s' attempted to access the protected URL: %s", auth.getName(), httpServletRequest.getRequestURI()));
+            logger.info("User '%s' attempted to access the protected URL: %s".formatted(auth.getName(), httpServletRequest.getRequestURI()));
         }
 
         httpServletResponse.sendRedirect(httpServletRequest.getContextPath() + "/403");
